[radiothermostat] Disable Remote Temp and Message Area on shutdown (#15492)
Signed-off-by: Michael Lobstein <michael.lobstein@gmail.com>
Signed-off-by: Jørgen Austvik <jaustvik@acm.org>